fix dark mode image invert

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -25,7 +25,7 @@ html {
     }
 
     img {
-        filter: invert(7.058823529%);
+        filter: invert(92.941176471%);
     }
 
     pre code {
